# clawboxfree

./: .dockerignore  .env  .env-provider.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.hermes  Makefile  README.md  docker-compose.yml  setup.sh
.hermes/: Dockerfile  SOUL.md
.sisyphus/run-continuation/: ses_0807ffd26ffeHA1LpKSJKKECu0.json
ai-free/: README.md  kilo_login.py  pyproject.toml
ai-free/tests/: test_kilo_login.py
hermes/: .env.example  Makefile  docker-compose.yml
nanobot/: .env.example  Dockerfile  Makefile  docker-compose.yml
nanobot/scripts/: nanobot-setup.sh
openclaw/: .env.example  Makefile  docker-compose.yml
openclaw/nginx/: entrypoint.sh  nginx.conf
openclaw/scripts/: openclaw-setup.sh
providers/: .env.example  Makefile  docker-compose.yml
providers/data/db/: data.sqlite
scripts/: sync-provider.sh
