[project]
name = "ai-free"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.15",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["."]
exclude = ["**/__pycache__", "**/.venv"]
